# src/routes/auth.js
@@ -1,5 +1,5 @@
 const router = require("express").Router();
-const { controllers: authControllers } = require("../api/v1/auth");
+const { controllers } = require("../api/v1/auth");
 
 const v1 = `/api/v1`;
 
@@ -11,14 +11,14 @@ const v1 = `/api/v1`;
  * @route baseurl/api/v1/auth/register
  * @method POST
  */
-router.route(`${v1}/auth/register`).post(authControllers.register);
+router.route(`${v1}/auth/register`).post(controllers.register);
 /**
  * @route baseurl/api/v1/auth/login-or-register-with-google
  * @method POST
  */
 router
   .route(`${v1}/auth/login-or-register-with-google`)
-  .post(authControllers.loginOrRegisterWithGoogle);
+  .post(controllers.loginOrRegisterWithGoogle);
 
 /**
  * @route baseurl/api/v1/auth/register-with-google
@@ -26,21 +26,19 @@ router
  */
 router
   .route(`${v1}/auth/register-with-google`)
-  .post(authControllers.registerWithGoogle);
+  .post(controllers.registerWithGoogle);
 
 /**
  * @route baseurl/api/v1/auth/register-with-google
  * @method POST
  */
-router
-  .route(`${v1}/auth/loging-with-google`)
-  .post(authControllers.loginWithGoogle);
+router.route(`${v1}/auth/loging-with-google`).post(controllers.loginWithGoogle);
 
 /**
  * @route baseurl/api/v1/auth/login
  * @method POST
  */
-router.route(`${v1}/auth/login`).post(authControllers.login);
+router.route(`${v1}/auth/login`).post(controllers.login);
 
 /**
  * @route baseurl/api/v1/auth/register-with-link
@@ -48,40 +46,39 @@ router.route(`${v1}/auth/login`).post(authControllers.login);
  */
 router
   .route(`${v1}/auth/register-with-link`)
-  .post(authControllers.registerWithLink);
+  .post(controllers.registerWithLink);
 /**
  * @route baseurl/api/v1/auth/register-link-varification
  * @method POST
  */
 router
   .route(`${v1}/auth/register-link-varification`)
-  .post(authControllers.registerValificationWithLink);
+  .post(controllers.registerValificationWithLink);
 
 /**
  * @route baseurl/api/v1/auth/forget-password
  * @method POST
  */
-router.route(`${v1}/auth/forget-password`).post(authControllers.forgetPassword);
+router.route(`${v1}/auth/forget-password`).post(controllers.forgetPassword);
 
 /**
  * @route baseurl/api/v1/auth/reset-password
  * @method POST
  */
-router.route(`${v1}/auth/reset-password`).post(authControllers.resetPassword);
+router.route(`${v1}/auth/reset-password`).post(controllers.resetPassword);
 /**
  * @route baseurl/api/v1/auth/refresh
  * @method POST
  */
 router
   .route(`${v1}/auth/refresh`)
-  .get(authControllers.getAccessTokenByRefreshToken);
+  .get(controllers.getAccessTokenByRefreshToken);
 /**
  * @route baseurl/api/v1/auth/logout
  * @method DELETE
  */
-router.route(`${v1}/auth/logout`).delete(authControllers.logout);
+router.route(`${v1}/auth/logout`).delete(controllers.logout);
 
 /*=====  End of Auth  ======*/
-
 
 module.exports = router;
