# src/routes/holiday.js
@@ -1,7 +1,7 @@
 const router = require("express").Router();
 const authorize = require("../middleware/authorize");
 const authenticate = require("../middleware/authenticate");
-const { controllers: holidayControllers } = require("../api/v1/holiday");
+const { controllers } = require("../api/v1/holiday");
 
 const v1 = `/api/v1`;
 
@@ -15,13 +15,13 @@ router
    * @route baseurl/api/v1/holidays
    * @method POST
    */
-  .post(authenticate, authorize(), holidayControllers.create)
+  .post(authenticate, authorize(), controllers.create)
   /**
    * Private Route by Admin
    * @route baseurl/api/v1/holidays
    * @method GET
    */
-  .get(authenticate, authorize(), holidayControllers.findAllItems);
+  .get(authenticate, authorize(), controllers.findAllItems);
 
 router
   .route(`${v1}/holidays/:id`)
@@ -30,19 +30,19 @@ router
    * @route baseurl/api/v1/holidays/:id
    * @method POST
    */
-  .get(authenticate, authorize(), holidayControllers.findSingleItem)
+  .get(authenticate, authorize(), controllers.findSingleItem)
   /**
    * Private Route by Admin
    * @route baseurl/api/v1/holidays/:id
    * @method PUT
    */
-  .put(authenticate, authorize(), holidayControllers.updateItem)
+  .put(authenticate, authorize(), controllers.updateItem)
   /**
    * Private Route by Admin
    * @route baseurl/api/v1/holidays/:id
    * @method DELETE
    */
-  .delete(authenticate, authorize(), holidayControllers.removeItem);
+  .delete(authenticate, authorize(), controllers.removeItem);
 
 /*=====  End of holiday  ======*/
 
